<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.minimarket.ui.home.HomeFragment"
        android:label="@string/title_ventana1"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_venta"
            app:destination="@id/nav_venta" />
    </fragment>
    <fragment
        android:id="@+id/nav_ingreso"
        android:name="com.example.minimarket.ui.ingreso.IngresoFragment"
        android:label="@string/title_ventana2"
        tools:layout="@layout/fragment_ingreso" />
    <fragment
        android:id="@+id/nav_venta"
        android:name="com.example.minimarket.ui.venta.VentaFragment"
        android:label="@string/title_ventana3"
        tools:layout="@layout/fragment_venta" >
        <action
            android:id="@+id/action_nav_venta_to_nav_ingreso"
            app:destination="@id/nav_ingreso" />
    </fragment>
</navigation>