<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/descarga"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="VisualLintOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9A000000"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="10sp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="89dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/bolsa_colores"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/tienda_javier"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/by_padin_javier"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>