<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/I_fondo"
    android:paddingTop="10dp"
    tools:context=".ui.ingreso.IngresoFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_slideshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/ingreso_de_productos"
                android:textAlignment="center"
                android:textColor="@color/I_txt_principal"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <SearchView
                android:id="@+id/BAR_BUSQUEDA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autofillHints="fff"
                android:background="@drawable/barra_busqueda"
                android:queryHint="Busqueda de producto" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/tituloNUMBARRA"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/codigo"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TXTCODIGO"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="@string/codigo_de_barra"
                    android:inputType="text"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/I_txt_hint"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/nombre"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TXTNOMBRE"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="@string/H_nombre_producto"
                    android:inputType="text"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textColorHint="@color/I_txt_hint"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/marca"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TXTMARCA"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="@string/H_Marca"
                    android:inputType="text"
                    android:textAlignment="textEnd"
                    android:textColorHint="@color/I_txt_hint"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/precio"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TXTPRECIO"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="@string/H_precio"
                    android:inputType="numberDecimal"
                    android:textAlignment="textEnd"
                    android:textColorHint="@color/I_txt_hint"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/cantidad"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/SWINCANTIDAD"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="@string/H_cantidad"
                    android:inputType="numberDecimal"
                    android:textAlignment="textEnd"
                    android:textColorHint="@color/I_txt_hint"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/TIPO_UNIDAD"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/benchnine"
                    android:text="@string/fecha_v"
                    android:textColor="@color/I_txt_secundario"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TXTFECHA"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:fontFamily="@font/benchnine"
                    android:hint="FECHA VENCIMIENTO"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:focusable="false" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center|center_horizontal">

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SCANEAR" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="35dp" />

                <Button
                    android:id="@+id/BUSCAR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buscar" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="35dp" />

                <Button
                    android:id="@+id/GUARDAR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GUARDAR" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="251dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/stock"
                tools:ignore="ImageContrastCheck" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/view_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#83FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/GUARDAR_F"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:onClick="GUARDAR_F"
            android:text="GUARDAR" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>